Added jpa persistence.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.flyway.enabled=true
+spring.flyway.sql-migration-prefix=V
+spring.flyway.locations=classpath:db/migrations/
+spring.jpa.open-in-view=false
+spring.main.banner-mode=off
